Change the usenet comp script to work with mbox gz files Include example input and output files

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,8 @@ dependencies = [
     "pandas",
     "pyarrow",
     "lxml",
-    "pyspark"
+    "pyspark",
+    "pyahocorasick"
 ]
 
 [tool.pytest.ini_options]
